--- a/faculty.html
+++ b/faculty.html
@@ -54,7 +54,7 @@ h2 {
 ===================== */
 .input-group {
   display: flex;
-  gap: 12px;
+  gap: 20px;
   justify-content: center;
   margin-bottom: 20px;
   flex-wrap: wrap;
@@ -64,7 +64,8 @@ h2 {
 /* Employee ID input box */
 input {
   padding: 10px;
-  font-size: 12px;
+  font-size: 14px;
+  font-family: Arial,'Times New Roman', Times, serif;
   border-radius: 6px;
   border: 1px solid #0b5592;
   max-width: 150px;
@@ -77,7 +78,7 @@ button {
   font-size: 14px;
   border: none;
   border-radius: 6px;
-  background: #065396;
+  background: #05457e;
   color: #fff;
   cursor: pointer;
   width: 100%;
@@ -128,6 +129,7 @@ td {
 th {
   background: #0b3c5d;
   color: white;
+  font-size: 12px;   /* ← ADD THIS LINE */
 }
 
 /* =====================
@@ -147,6 +149,7 @@ th:first-child {
   left: 0;
   z-index: 2;
   background: #0b3c5d;
+  font-size: 12px;
   color: white;
 }
 
@@ -223,26 +226,13 @@ tr:nth-child(even) {
   min-width: 100px;
 }
 
-/* ===== MOBILE FIX ===== */
-@media (max-width: 600px) {
-  #downloadSection {
-    flex-direction: column;   /* stack vertically */
-    align-items: center;
-  }
-
-  .action-btn {
-    width: 50%;               /* same width */
-    margin-bottom: 8px;       /* clean spacing */
-  }
-}
-
 /* =====================
    MOBILE RESPONSIVE
 ===================== */
 @media (max-width: 600px) {
 
   h2 {
-    font-size: 16px;
+    font-size: 17px;
   }
 
   .table-wrapper {
@@ -285,22 +275,26 @@ tr:nth-child(even) {
   select,
   input,
   button {
-    max-width: 150px;
+    max-width: 160px;
     margin: 1px auto;
     display: block;
-    font-size: 12px;
-    padding: 10px;
+    font-size: 14px;
+    padding: 14px;
   }
 
   button {
-    width: 50%;
+    width: 60%;
   }
-
+  .action-btn {
+    width: 60%;               /* same width */
+    padding: 10px;
+    margin-bottom: 8px;       /* clean spacing */
+  }
   .college-logo {
-    max-width: 90px;
+    max-width: 140px;
   }
-
 }
+
 </style>
 </head>
 
@@ -328,13 +322,13 @@ tr:nth-child(even) {
         <thead>
           <tr>
             <th>Day</th>
-            <th>10:00<br>11:00AM</th>
-            <th>11:00AM<br>12:00PM</th>
-            <th>12:00<br>01:00PM</th>
+            <th>10:00 AM<br>11:00 AM</th>
+            <th>11:00 AM<br>12:00 PM</th>
+            <th>12:00 PM<br>01:00 PM</th>
             <th>Lunch<br>Hour</th>
-            <th>02:00<br>03:00PM</th>
-            <th>03:00<br>04:00PM</th>
-            <th>04:00<br>05:00PM</th>
+            <th>02:00 PM<br>03:00 PM</th>
+            <th>03:00 PM<br>04:00 PM</th>
+            <th>04:00 PM<br>05:00 PM</th>
           </tr>
         </thead>
         <tbody></tbody>
