--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
   .button-group {
     display: flex;
     justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
+    gap: 12px;
+    align-items: center;
+    flex-direction: column;
+    
   }
 
   button {
     width: 100%;
-    max-width: 180px;
+    max-width: 160px;
     padding: 12px;
     font-size: 14px;
     border-radius: 6px;
@@ -84,20 +86,22 @@
   /* ---------- Mobile Specific ---------- */
   @media (max-width: 480px) {
     h1 {
-      font-size: 20px;
+      font-size: 22px;
     }
 
     h2 {
-      font-size: 15px;
+      font-size: 18px;
     }
 
     .logo {
-      max-width: 85px;
+      max-width: 140px;
     }
 
-    button {
-      font-size: 14px;
-      padding: 12px;
+    .button-group {
+      font-size: 15px;
+      flex-direction: column;
+      align-items: center;
+      padding: 16px;
     }
   }
 </style>
