--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   .card {
     background: #ffffff;
     width: 100%;
-    max-width: 600px;
-    padding: 25px 20px;
+    max-width: 800px;
+    padding: 80px 100px;
     border-radius: 14px;
     text-align: center;
     box-shadow: 0 15px 30px rgba(0,0,0,0.25);
@@ -45,6 +45,7 @@
   }
 
   h2 {
+    margin: 30px 0 6px;
     margin-bottom: 25px;
     font-size: 18px;
     color: #065396;
@@ -53,17 +54,20 @@
   .button-group {
     display: flex;
     justify-content: center;
-    gap: 12px;    
+    gap: 12px;
+    padding: 11px;
+    
+    
   }
 
   button {
-    width: 100%;
-    max-width: 160px;
+    width: 80%;
+    max-width: 180px;
     padding: 12px;
     font-size: 14px;
     border-radius: 6px;
     border: 1px;
-    background: #065396;
+    background: #074072;
     color: white;
     cursor: pointer;
     transition: 0.3s;
@@ -75,7 +79,7 @@
 
   .footer {
     margin-top: 25px;
-    font-size: 12px;
+    font-size: 13px;
     color: #0f477a;
     font-weight: bold;
   }
@@ -83,22 +87,43 @@
   /* ---------- Mobile Specific ---------- */
   @media (max-width: 480px) {
     h1 {
-      font-size: 26px;
+      font-size: 30px;
     }
 
     h2 {
-      font-size: 18px;
+      font-size: 20px;
     }
 
+    .card {
+    background: #ffffff;
+    width: 95%;
+    max-width: 400px;
+    padding: 50px 20px;
+    border-radius: 14px;
+    text-align: center;
+    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+  }
     .logo {
       max-width: 140px;
     }
 
+    button {
+    width: 80%;
+    max-width: 180px;
+    padding: 16px;
+    font-size: 16px;
+    border-radius: 6px;
+    border: 1px;
+    background: #074072;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
     .button-group {
-      font-size: 15px;
       flex-direction: column;
       align-items: center;
-      padding: 16px;
+      padding: 10px;
     }
   }
 </style>
@@ -132,5 +157,3 @@
 
 </body>
 </html>
-
-
