--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   .card {
     background: #ffffff;
     width: 100%;
-    max-width: 800px;
-    padding: 80px 100px;
+    max-width: 900px;
+    padding: 50px 10px;
     border-radius: 14px;
     text-align: center;
     box-shadow: 0 15px 30px rgba(0,0,0,0.25);
@@ -78,40 +78,44 @@
   }
 
   .footer {
-    margin-top: 25px;
+    margin-top: 30px;
     font-size: 13px;
     color: #0f477a;
     font-weight: bold;
   }
 
   /* ---------- Mobile Specific ---------- */
-  @media (max-width: 480px) {
+  @media (max-width: 400px) {
     h1 {
-      font-size: 30px;
+      font-size: 22px;
+      line-height: 1.2;
+      margin-bottom: 8px;
     }
 
     h2 {
-      font-size: 20px;
+      font-size: 16px;
+      margin-bottom: 15px;
     }
 
     .card {
     background: #ffffff;
     width: 95%;
-    max-width: 400px;
-    padding: 50px 30px;
+    max-width: 500px;
+    padding: 15px 8px;
     border-radius: 14px;
     text-align: center;
     box-shadow: 0 15px 30px rgba(0,0,0,0.25);
   }
     .logo {
-      max-width: 140px;
+      max-width:100px;
+      margin-bottom: 5px;
     }
 
     button {
-    width: 80%;
-    max-width: 180px;
-    padding: 16px;
-    font-size: 16px;
+    width: 70%;
+    max-width: 160px;
+    padding: 12px;
+    font-size: 12px;
     border-radius: 6px;
     border: 1px;
     background: #074072;
@@ -120,7 +124,7 @@
     transition: 0.3s;
   }
 
-  .button-group {
+    .button-group {
       flex-direction: column;
       align-items: center;
       padding: 10px;
@@ -157,4 +161,3 @@
 
 </body>
 </html>
-
