--- a/faculty.html
+++ b/faculty.html
@@ -33,12 +33,15 @@ body {
 .card {
   background: #ffffff;
   width: 100%;
-  max-width: 900px;
-  padding: 20px;
+  max-width: 700px;
+  padding: 30px 20px;
   border-radius: 12px;
   box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+  transition: 0.1s;
 }
-
+.card.big {
+  max-width: 1000px;   /* bigger after table shows */
+}
 /* =====================
    PAGE HEADING
 ===================== */
@@ -115,9 +118,9 @@ table {
 th,
 td {
   border: 1px solid rgb(182, 200, 207);
-  padding: 8px;
+  padding: 12px;
   text-align: center;
-  font-size: 11px;        /* ✅ table font size */
+  font-size: 12px;        /* ✅ table font size */
   color: #0b3c5d;         /* ✅ table text color */
   white-space: normal;
   word-break: break-word;
@@ -211,7 +214,7 @@ tr:nth-child(even) {
 #downloadSection {
   display: flex;
   justify-content: center;
-  gap: 50px;               /* space between buttons (desktop) */
+  gap: 200px;               /* space between buttons (desktop) */
   flex-wrap: wrap;
 }
 
@@ -232,7 +235,7 @@ tr:nth-child(even) {
 @media (max-width: 600px) {
 
   h2 {
-    font-size: 17px;
+    font-size: 16px;
   }
 
   .table-wrapper {
@@ -264,34 +267,31 @@ tr:nth-child(even) {
   }
 
   .card {
-    padding: 12px;
-  }
-
-  .input-group {
-    flex-direction: column;
-    align-items: center;
+    background: #ffffff;
+    width: 95%;
+    max-width: 600px;
+    padding: 40px 10px;
+    border-radius: 14px;
+    text-align: center;
+    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
   }
 
   select,
   input,
   button {
-    max-width: 160px;
+    max-width: 180px;
+    width: 55%;
     margin: 1px auto;
     display: block;
-    font-size: 14px;
-    padding: 14px;
+    font-size: 12px;
+    padding: 12px;
   }
 
   button {
-    width: 60%;
-  }
-  .action-btn {
-    width: 60%;               /* same width */
-    padding: 10px;
-    margin-bottom: 8px;       /* clean spacing */
+    width: 55%;
   }
   .college-logo {
-    max-width: 140px;
+    max-width: 100px;
   }
 }
 
@@ -393,6 +393,7 @@ function loadTimetable() {
       tbody.innerHTML = "";
 
       table.style.display = "table";
+      table.style.display = "table";
 
       timetableData.forEach(dayRow => {
         const tr = document.createElement("tr");
@@ -400,6 +401,7 @@ function loadTimetable() {
           timeSlots.map(t => `<td>${dayRow[t] || ""}</td>`).join("");
         tbody.appendChild(tr);
       });
+      document.querySelector(".card").classList.add("big");
     })
     .catch(err => {
       alert("Error fetching data");
