--- a/student.html
+++ b/student.html
@@ -23,13 +23,13 @@
     .card {
       background: #ffffff;
       width: 100%;
-      max-width: 700px;
-      padding: 30px;
+      max-width: 800px;
+      padding: 60px 20px;
       border-radius: 12px;
       box-shadow: 0 15px 30px rgba(0,0,0,0.2);
       }
     .card.big {
-      max-width: 1000px;   /* bigger after table shows */
+      max-width: 1100px;   /* bigger after table shows */
       }
 
     h2 {
